grab all the rosters from 1973 and work on stats from 1980

--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -155,6 +155,9 @@
    "outputs": [],
    "source": [
     "tyear = [2019]\n",
+    "if tyear[0] < 1980:\n",
+    "    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
+    "    raise\n",
     "CURRENT_YEAR = 2019\n",
     "if tyear[0] <= CURRENT_YEAR-1:\n",
     "    # fill out the next 3 drafts\n",
@@ -312,15 +315,23 @@
     "            hgt = ht[0]*12 + ht[1]\n",
     "        except:\n",
     "            hgt=70\n",
+    "        if 'shooting' in player_stats[ty][name]:\n",
+    "            d = {\n",
+    "            'AtRimFGP':player_stats[ty][name]['shooting'][0][11]*100,\n",
+    "            'LowPostFGP':player_stats[ty][name]['shooting'][0][11]*100, #12\n",
+    "            'MidRangeFGP':player_stats[ty][name]['shooting'][0][13]*100}\n",
+    "        else:\n",
+    "            d = {\n",
+    "            'AtRimFGP':player_stats[ty][name]['totals'][0][12]*100,\n",
+    "            'LowPostFGP':player_stats[ty][name]['totals'][0][12]*100, #12\n",
+    "            'MidRangeFGP':player_stats[ty][name]['totals'][0][13]*100}\n",
     "        #for stat in X.columns:\n",
-    "        d=    {'FG%':player_stats[ty][name]['totals'][0][6]*100,\n",
+    "        d.update({'FG%':player_stats[ty][name]['totals'][0][6]*100,\n",
     "            'Hgt':3.7*(hgt-66),\n",
     "            '3P%':player_stats[ty][name]['totals'][0][9]*100,\n",
     "            'MP':player_stats[ty][name]['per_game'][0][3],\n",
     "            'FT%':player_stats[ty][name]['totals'][0][16]*100,\n",
-    "            'AtRimFGP':player_stats[ty][name]['shooting'][0][11]*100,\n",
-    "            'LowPostFGP':player_stats[ty][name]['shooting'][0][11]*100, #12\n",
-    "            'MidRangeFGP':player_stats[ty][name]['shooting'][0][13]*100,\n",
+    "\n",
     "            'TS%':player_stats[ty][name]['advanced'][0][4]*100,\n",
     "            '3PAr':player_stats[ty][name]['advanced'][0][5]*100,\n",
     "            'FTr':player_stats[ty][name]['advanced'][0][6]*100,\n",
@@ -367,7 +378,7 @@
     "            'DPM':player_stats[ty][name]['advanced'][0][17],\n",
     "            'OPM':player_stats[ty][name]['advanced'][0][16],\n",
     "            'OWSp36':36*player_stats[ty][name]['advanced'][0][16]/player_stats[ty][name]['advanced'][0][2],\n",
-    "            'DWSp36':36*player_stats[ty][name]['advanced'][0][17]/player_stats[ty][name]['advanced'][0][2]}\n",
+    "            'DWSp36':36*player_stats[ty][name]['advanced'][0][17]/player_stats[ty][name]['advanced'][0][2]})\n",
     "        d['3PtP'] = (2/(1+np.exp(-d['3PAp100']))-1)*d['3P%']/100\n",
     "        d['Creation'] = d['ASTp100']*0.1843+(d['PTSp100']+d['TOVp100'])*0.0969-2.3021*d['3PtP']+0.0582*(d['ASTp100']*(d['PTSp100']+d['TOVp100'])*d['3PtP'] )-1.1942\n",
     "        d['Load'] = (d['ASTp100']-(0.38*d['Creation'])*0.75)+d['FGAp100']+d['FTAp100']*0.44+d['Creation']+d['TOVp100']\n",
@@ -459,7 +470,7 @@
     "for team in all_tables[tyear[0]]:\n",
     "    for name in all_tables[tyear[0]][team]['roster'].index:\n",
     "        rosters[name] = team\n",
-    "    #print(team,)"
+    "    #print(team,)\n"
    ]
   },
   {
@@ -491,8 +502,26 @@
     "abbrev_to_tid['NOH'] = abbrev_to_tid['NOP']\n",
     "abbrev_to_tid['NJN'] = abbrev_to_tid['BKN']\n",
     "abbrev_to_tid['SEA'] = abbrev_to_tid['OKC']\n",
+    "abbrev_to_tid['KCK'] = abbrev_to_tid['SAC']\n",
+    "abbrev_to_tid['SDC'] = abbrev_to_tid['LAC']\n",
+    "abbrev_to_tid['WSB'] = abbrev_to_tid['WAS']\n",
     "\n",
     "base['startingSeason'] = tyear[0]\n",
+    "valid_tids = {abbrev_to_tid[_] for _ in teams}\n",
+    "\n",
+    "valid_teams = []\n",
+    "for t in base['teams']:\n",
+    "    if t['tid'] in valid_tids:\n",
+    "        tid = len(valid_teams)\n",
+    "        otid = t['tid']\n",
+    "        t['tid'] = tid\n",
+    "        for k,v in abbrev_to_tid.items():\n",
+    "            if v == otid:\n",
+    "                abbrev_to_tid[k] = tid\n",
+    "        valid_teams.append(t)\n",
+    "base['teams'] = valid_teams\n",
+    "if tyear[0] < CURRENT_YEAR-2:\n",
+    "    del base['draftPicks']\n",
     "\n",
     "players_discard = [_ for _ in playersOG if  _['tid'] > -3 ]\n",
     "players_to_keep = []#[-1,-2,-4,-5]\n",
@@ -542,6 +571,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if False:\n",
+    "    ri = 0\n",
+    "    _ = plt.hist(yt[:,ri],100,normed=True,alpha=0.5,label='predicted')\n",
+    "    _ = plt.hist(y.iloc[:,ri],100,normed=True,alpha=0.5,label='labels')\n",
+    "    _ = plt.hist(ratings[:,ri],100,normed=True,alpha=0.5,label='dataset')\n",
+    "    plt.xlim(-100,100)\n",
+    "    plt.legend()\n",
+    "elif False:\n",
+    "    plt.figure(figsize=(20,20))\n",
+    "\n",
+    "    for ri in range(len(X.columns)):\n",
+    "        #ri = 13\n",
+    "        plt.figure()\n",
+    "        #plt.subplot(6,6,ri+1)\n",
+    "\n",
+    "        _ = plt.hist(Xn[:,ri],100,density=True,alpha=0.5,label='mine')\n",
+    "        _ = plt.hist(X.iloc[:,ri],100,density=True,alpha=0.5,label='expected')\n",
+    "        plt.legend()\n",
+    "        plt.title(X.columns[ri] + ' ' + str(ri))\n",
+    "        plt.tight_layout()\n",
+    "        plt.xlim(-100,100)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pprint\n",
     "import copy\n",
     "\n",
@@ -582,7 +640,8 @@
     "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':CURRENT_YEAR-1+len(ctrct)}\n",
     "    else:\n",
     "        continue\n",
-    "    scale_rookie = [1.0,1.0,1.0][year_gap]\n",
+    "    #print(year_gap)\n",
+    "    scale_rookie = [1.0,1.0,1.0,1.0][year_gap]\n",
     "    new_player['ratings'] = [{k: int(scale_rookie*np.clip(ratings[i,y_keys.index(km)],0,100)) for k,km in y_map.items()}]\n",
     "    \n",
     "    players.append(new_player)\n",
@@ -598,46 +657,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if False:\n",
-    "    ri = 0\n",
-    "    _ = plt.hist(yt[:,ri],100,normed=True,alpha=0.5,label='predicted')\n",
-    "    _ = plt.hist(y.iloc[:,ri],100,normed=True,alpha=0.5,label='labels')\n",
-    "    _ = plt.hist(ratings[:,ri],100,normed=True,alpha=0.5,label='dataset')\n",
-    "    plt.xlim(-100,100)\n",
-    "    plt.legend()\n",
-    "elif False:\n",
-    "    plt.figure(figsize=(20,20))\n",
-    "\n",
-    "    for ri in range(len(X.columns)):\n",
-    "        #ri = 13\n",
-    "        plt.figure()\n",
-    "        #plt.subplot(6,6,ri+1)\n",
-    "\n",
-    "        _ = plt.hist(Xn[:,ri],100,density=True,alpha=0.5,label='mine')\n",
-    "        _ = plt.hist(X.iloc[:,ri],100,density=True,alpha=0.5,label='expected')\n",
-    "        plt.legend()\n",
-    "        plt.title(X.columns[ri] + ' ' + str(ri))\n",
-    "        plt.tight_layout()\n",
-    "        plt.xlim(-100,100)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "base['players'] = players\n",
     "with open('auto_roster_{}.json'.format(tyear[0]),'wt') as fp:\n",
     "    json.dump(base,fp, indent=4, sort_keys=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
