generate FAs, fix rookie bug

--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -154,7 +154,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tyear = [2019]\n",
+    "GEN_YEAR = 1992\n",
+    "tyear = [GEN_YEAR]\n",
     "if tyear[0] < 1980:\n",
     "    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
     "    raise\n",
@@ -398,7 +399,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "first_n = len([yr for yr in player_years if yr == tyear[0]])"
+    "first_n = len([yr for yr in player_years if yr == tyear[0]])\n",
+    "gen_FA = len(teams)*5\n",
+    "first_n,len(teams),gen_FA\n"
    ]
   },
   {
@@ -409,7 +412,7 @@
    "source": [
     "#table_columns['per_minute']#,table_columns['advanced'].index('0-3')\n",
     "#for i,t in enumerate(player_stats[name]['advanced'][0]):\n",
-    "#    print(i,t)\n"
+    "#    print(i,t)"
    ]
   },
   {
@@ -428,6 +431,9 @@
     "#ratings[:,0] = Xn[:,list(X.columns).index('Hgt')]\n",
     "HGT_PRED = 0.75\n",
     "ratings[:,0] = HGT_PRED*ratings[:,0] + (1-HGT_PRED)* Xn[:,list(X.columns).index('Hgt')]\n",
+    "if gen_FA > 0:\n",
+    "    FA_ratings = scalery.inverse_transform(clf.predict(fexp.transform(0.1*np.random.randn(gen_FA,Xn.shape[1]))))\n",
+    "    ratings = np.vstack([ratings,FA_ratings] )\n",
     "#ratings = scalery.inverse_transform(clf.predict(fexp.transform(scalerX.transform(Xn))))"
    ]
   },
@@ -505,6 +511,7 @@
     "abbrev_to_tid['KCK'] = abbrev_to_tid['SAC']\n",
     "abbrev_to_tid['SDC'] = abbrev_to_tid['LAC']\n",
     "abbrev_to_tid['WSB'] = abbrev_to_tid['WAS']\n",
+    "abbrev_to_tid['CHH'] = abbrev_to_tid['CHA']\n",
     "\n",
     "base['startingSeason'] = tyear[0]\n",
     "valid_tids = {abbrev_to_tid[_] for _ in teams}\n",
@@ -524,6 +531,8 @@
     "    del base['draftPicks']\n",
     "\n",
     "players_discard = [_ for _ in playersOG if  _['tid'] > -3 ]\n",
+    "players_FA = [_ for _ in playersOG if  _['tid'] == -1 ]\n",
+    "\n",
     "players_to_keep = []#[-1,-2,-4,-5]\n",
     "\n",
     "#-2 is for undrafted players the ongoing or upcoming draft\n",
@@ -591,7 +600,45 @@
     "        plt.legend()\n",
     "        plt.title(X.columns[ri] + ' ' + str(ri))\n",
     "        plt.tight_layout()\n",
-    "        plt.xlim(-100,100)\n"
+    "        plt.xlim(-100,100)\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "def write_roman(num):\n",
+    "\n",
+    "    roman = OrderedDict()\n",
+    "    roman[1000] = \"M\"\n",
+    "    roman[900] = \"CM\"\n",
+    "    roman[500] = \"D\"\n",
+    "    roman[400] = \"CD\"\n",
+    "    roman[100] = \"C\"\n",
+    "    roman[90] = \"XC\"\n",
+    "    roman[50] = \"L\"\n",
+    "    roman[40] = \"XL\"\n",
+    "    roman[10] = \"X\"\n",
+    "    roman[9] = \"IX\"\n",
+    "    roman[5] = \"V\"\n",
+    "    roman[4] = \"IV\"\n",
+    "    roman[1] = \"I\"\n",
+    "\n",
+    "    def roman_num(num):\n",
+    "        for r in roman.keys():\n",
+    "            x, y = divmod(num, r)\n",
+    "            yield roman[r] * x\n",
+    "            num -= (r * x)\n",
+    "            if num <= 0:\n",
+    "                break\n",
+    "\n",
+    "    return \"\".join([a for a in roman_num(num)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_names = player_names + [\"Free Agent{}\".format(write_roman(i)) for i in range(gen_FA)]\n",
+    "player_years = player_years + [GEN_YEAR for i in range(gen_FA)]"
    ]
   },
   {
@@ -611,18 +658,17 @@
     "    new_player = {}\n",
     "    new_player['firstName'] = sname[0]\n",
     "    new_player['lastName'] = ' '.join(sname[1:])\n",
-    "\n",
     "    year_gap = 0\n",
-    "    if 'roster' in player_stats[py][name]:\n",
+    "    if name in player_stats[py] and 'roster' in player_stats[py][name]:\n",
     "        exp_years =  player_stats[py][name]['roster'][0][5]\n",
-    "        exp_years = int(1 if exp_years == 'R' else exp_years)\n",
+    "        exp_years = int(0 if exp_years == 'R' else exp_years)\n",
     "\n",
     "        \n",
     "        year_gap = (py-tyear[0]) #0,1,2\n",
     "        \n",
     "        if py == tyear[0] and name in rosters:\n",
     "             tid = abbrev_to_tid[rosters[name]]\n",
-    "        elif exp_years != 1:\n",
+    "        elif exp_years != 0:\n",
     "            continue\n",
     "        else:\n",
     "            tid = [-2,-4,-5][year_gap-1]\n",
@@ -638,7 +684,16 @@
     "            ctrct = [float(_) for _ in player_stats[py][name]['contracts'][0] if _ != '0.5']\n",
     "            if len(ctrct) > 0:\n",
     "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':CURRENT_YEAR-1+len(ctrct)}\n",
+    "    elif i > Xn.shape[0]:\n",
+    "        print(name)\n",
+    "        new_player['tid'] = int(-1)\n",
+    "        new_player['weight'] = int(np.random.normal(220,20))\n",
+    "        new_player['height'] = int(np.random.normal(6*12+6,3))\n",
+    "        new_player['born'] = {'year':int(GEN_YEAR-np.random.normal(32,2)),'loc':''}\n",
+    "        new_player['pos'] = \"GF\"\n",
+    "        #print(new_player)\n",
     "    else:\n",
+    "        #print(name)\n",
     "        continue\n",
     "    #print(year_gap)\n",
     "    scale_rookie = [1.0,1.0,1.0,1.0][year_gap]\n",
