--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -47,9 +47,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for name in ['FG','FGA','3P',\"3PA\",'FT','FTA',\\\n",
+    "stat_list = ['FG','FGA','3P',\"3PA\",'FT','FTA',\\\n",
     "             'ORB','DRB','TRB','AST','TOV','STL',\"Blk\",\\\n",
-    "             'PF',\"PTS\",'OWS','DWS']:\n",
+    "             'PF',\"PTS\",'OWS','DWS']\n",
+    "for name in stat_list:\n",
     "    X[name + 'p36'] = 36* df[name]/np.maximum(1,df.MP)\n",
     "    X[name + 'p100'] = X[name + 'p36']*4/3\n",
     "\n",
@@ -59,9 +60,10 @@
     "X['cTOV'] = X['TOVp100']/X['Load']\n",
     "#X['DPM'] = X['Blkp100']*0.802+X['DRBp100']*0.42-4.7-0.07551*X['PFp100']+1.597019*X['STLp100']-0.26385*X['TOVp100']\n",
     "#X['OPM'] = -8.57647+0.6111*X['PTSp100']-0.33918*(0.44*X['FTAp100']+X['FGAp100'])+0.440814*X['FTAp100']+0.379745*X['3PAp100']+0.634044*X['ASTp100']+0.77827*X['ORBp100']-1.08855*X['TOVp100']+0.26262*X['STLp100']\n",
+    "#X['BPM'] = X['OPM'] + X['DPM']\n",
     "\n",
     "#X['PassP'] = ((X['ASTp100']-(0.38*X['Creation']))*0.752+ X['Creation'] + X['TOVp100']) ** 0.67\n",
-    "#'OPM','DPM','cTOV','Load'\n",
+    "#'OPM','DPM','cTOV','Load'#stat_list[:-2]+\n",
     "X = X[[_ for _ in X.columns if '%' in _ or _[-1]=='r' or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in ['Creation','PER','MP','Hgt']]]\n",
     "X.columns"
    ]
@@ -72,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#_ =  plt.hist(X['OPM'],150)"
+    "#_ =  plt.hist(X['BPM'],150)"
    ]
   },
   {
@@ -154,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 1992\n",
+    "GEN_YEAR = 2010\n",
     "tyear = [GEN_YEAR]\n",
     "if tyear[0] < 1980:\n",
     "    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
@@ -234,15 +236,16 @@
    "outputs": [],
    "source": [
     "# add playoff data to normal data\n",
-    "for ty in tyear:\n",
-    "    for player in player_stats[ty]:\n",
-    "        for table_in in player_stats[ty][player]:\n",
-    "            tableN = table_in.split('_')\n",
-    "            tableS = '_'.join(tableN[1:])\n",
-    "            if 'playoffs'==tableN[0] and not table_in in ['playoffs_pbp']:\n",
-    "                #print(table_in)\n",
-    "                if tableS in player_stats[ty][player]:\n",
-    "                    player_stats[ty][player][tableS] += player_stats[ty][player][table_in]"
+    "if False:\n",
+    "    for ty in tyear:\n",
+    "        for player in player_stats[ty]:\n",
+    "            for table_in in player_stats[ty][player]:\n",
+    "                tableN = table_in.split('_')\n",
+    "                tableS = '_'.join(tableN[1:])\n",
+    "                if 'playoffs'==tableN[0] and not table_in in ['playoffs_pbp']:\n",
+    "                    #print(table_in)\n",
+    "                    if tableS in player_stats[ty][player]:\n",
+    "                        player_stats[ty][player][tableS] += player_stats[ty][player][table_in]"
    ]
   },
   {
@@ -302,6 +305,7 @@
     "player_vectors = []\n",
     "player_names = []\n",
     "player_years = []\n",
+    "player_scales = []\n",
     "\n",
     "for ty in tyear:\n",
     "    for name in player_stats[ty]:\n",
@@ -329,10 +333,26 @@
     "        #for stat in X.columns:\n",
     "        d.update({'FG%':player_stats[ty][name]['totals'][0][6]*100,\n",
     "            'Hgt':3.7*(hgt-66),\n",
+    "            'FG': player_stats[ty][name]['per_game'][0][4],\n",
+    "            'FGA': player_stats[ty][name]['per_game'][0][5],\n",
+    "            '3P': player_stats[ty][name]['per_game'][0][7],\n",
+    "            '3PA': player_stats[ty][name]['per_game'][0][8],\n",
+    "            'FT': player_stats[ty][name]['per_game'][0][14],\n",
+    "            'FTA': player_stats[ty][name]['per_game'][0][15],\n",
+    "            'ORB': player_stats[ty][name]['per_game'][0][17],\n",
+    "            'DRB': player_stats[ty][name]['per_game'][0][18],\n",
+    "            'TRB': player_stats[ty][name]['per_game'][0][19],\n",
+    "            'AST': player_stats[ty][name]['per_game'][0][20],\n",
+    "            'STL': player_stats[ty][name]['per_game'][0][21],\n",
+    "            'Blk': player_stats[ty][name]['per_game'][0][22],\n",
+    "            'TOV': player_stats[ty][name]['per_game'][0][23],\n",
+    "            'PF': player_stats[ty][name]['per_game'][0][24],\n",
+    "            'PTS': player_stats[ty][name]['per_game'][0][25],\n",
+    "            'OWS':player_stats[ty][name]['advanced'][0][16],\n",
+    "            'DWS':player_stats[ty][name]['advanced'][0][17],\n",
     "            '3P%':player_stats[ty][name]['totals'][0][9]*100,\n",
     "            'MP':player_stats[ty][name]['per_game'][0][3],\n",
     "            'FT%':player_stats[ty][name]['totals'][0][16]*100,\n",
-    "\n",
     "            'TS%':player_stats[ty][name]['advanced'][0][4]*100,\n",
     "            '3PAr':player_stats[ty][name]['advanced'][0][5]*100,\n",
     "            'FTr':player_stats[ty][name]['advanced'][0][6]*100,\n",
@@ -378,19 +398,36 @@
     "            'PER':player_stats[ty][name]['advanced'][0][3],\n",
     "            'DPM':player_stats[ty][name]['advanced'][0][17],\n",
     "            'OPM':player_stats[ty][name]['advanced'][0][16],\n",
+    "            'BPM':player_stats[ty][name]['advanced'][0][18],\n",
+    "\n",
     "            'OWSp36':36*player_stats[ty][name]['advanced'][0][16]/player_stats[ty][name]['advanced'][0][2],\n",
     "            'DWSp36':36*player_stats[ty][name]['advanced'][0][17]/player_stats[ty][name]['advanced'][0][2]})\n",
     "        d['3PtP'] = (2/(1+np.exp(-d['3PAp100']))-1)*d['3P%']/100\n",
     "        d['Creation'] = d['ASTp100']*0.1843+(d['PTSp100']+d['TOVp100'])*0.0969-2.3021*d['3PtP']+0.0582*(d['ASTp100']*(d['PTSp100']+d['TOVp100'])*d['3PtP'] )-1.1942\n",
     "        d['Load'] = (d['ASTp100']-(0.38*d['Creation'])*0.75)+d['FGAp100']+d['FTAp100']*0.44+d['Creation']+d['TOVp100']\n",
     "        d['cTOV'] = d['TOVp100']/d['Load']\n",
-    "        d['DPM'] = d['Blkp100']*0.802+d['DRBp100']*0.42-4.7-0.07551*d['PFp100']+1.597019*d['STLp100']-0.26385*d['TOVp100']\n",
-    "        d['OPM'] = -8.57647+0.6111*d['PTSp100']-0.33918*(0.44*d['FTAp100']+d['FGAp100'])+0.440814*d['FTAp100']+0.379745*d['3PAp100']+0.634044*d['ASTp100']+0.77827*d['ORBp100']-1.08855*d['TOVp100']+0.26262*d['STLp100']\n",
+    "        #d['DPM'] = d['Blkp100']*0.802+d['DRBp100']*0.42-4.7-0.07551*d['PFp100']+1.597019*d['STLp100']-0.26385*d['TOVp100']\n",
+    "        #d['OPM'] = -8.57647+0.6111*d['PTSp100']-0.33918*(0.44*d['FTAp100']+d['FGAp100'])+0.440814*d['FTAp100']+0.379745*d['3PAp100']+0.634044*d['ASTp100']+0.77827*d['ORBp100']-1.08855*d['TOVp100']+0.26262*d['STLp100']\n",
+    "        #d['BPM'] = d['OPM']+d['DPM']\n",
     "\n",
+    "        MP = np.nan_to_num(player_stats[ty][name]['totals'][0][3])\n",
+    "        mp_scale = np.tanh(MP/600) # basically 1 by 1200 MP\n",
+    "        if np.isnan(mp_scale):\n",
+    "            print(name,ty,MP)\n",
+    "        player_scales.append(mp_scale)\n",
     "        #d['PassP'] = ((d['ASTp100']-(0.38*d['Creation']))*0.752+ d['Creation'] + d['TOVp100']) ** 0.67\n",
-    "\n",
     "        player_vectors.append([d[stat] for stat in X.columns])\n",
     "X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#stat_list\n",
+    "#player_stats[2010]['Stephen Curry']['per_game'][0][17]"
    ]
   },
   {
@@ -402,17 +439,6 @@
     "first_n = len([yr for yr in player_years if yr == tyear[0]])\n",
     "gen_FA = len(teams)*5\n",
     "first_n,len(teams),gen_FA\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#table_columns['per_minute']#,table_columns['advanced'].index('0-3')\n",
-    "#for i,t in enumerate(player_stats[name]['advanced'][0]):\n",
-    "#    print(i,t)"
    ]
   },
   {
@@ -434,7 +460,20 @@
     "if gen_FA > 0:\n",
     "    FA_ratings = scalery.inverse_transform(clf.predict(fexp.transform(0.1*np.random.randn(gen_FA,Xn.shape[1]))))\n",
     "    ratings = np.vstack([ratings,FA_ratings] )\n",
-    "#ratings = scalery.inverse_transform(clf.predict(fexp.transform(scalerX.transform(Xn))))"
+    "    # use the first FA as a mean to bring down the low minutes people\n",
+    "    c = np.array(player_scales).reshape((-1,1))\n",
+    "    #ratings[:Xn.shape[0]] = ratings[:Xn.shape[0]]*c + (1-c)*np.repeat(ratings[Xn.shape[0]].reshape((-1,1)),Xn.shape[0],1).T\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#table_columns['per_minute']#,table_columns['advanced'].index('0-3')\n",
+    "#for i,t in enumerate(player_stats[name]['advanced'][0]):\n",
+    "#    print(i,t)"
    ]
   },
   {
