--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -51,20 +51,24 @@
     "             'ORB','DRB','TRB','AST','TOV','STL',\"Blk\",\\\n",
     "             'PF',\"PTS\",'OWS','DWS']\n",
     "for name in stat_list:\n",
-    "    X[name + 'p36'] = 36* df[name]/np.maximum(1,df.MP)\n",
+    "    den = np.maximum(1,df.MP)\n",
+    "    #if name in ['OWS','DWS']:\n",
+    "    #    den = den*df['G']\n",
+    "    X[name + 'p36'] = 36* df[name]/den\n",
     "    X[name + 'p100'] = X[name + 'p36']*4/3\n",
     "\n",
     "X['3PtP'] = (2/(1+np.exp(-X['3PAp100']))-1)*X['3P%']/100\n",
     "X['Creation'] = X['ASTp100']*0.1843+(X['PTSp100']+X['TOVp100'])*0.0969-2.3021*X['3PtP']+0.0582*(X['ASTp100']*(X['PTSp100']+X['TOVp100'])*X['3PtP'] )-1.1942\n",
     "X['Load'] = (X['ASTp100']-(0.38*X['Creation'])*0.75)+X['FGAp100']+X['FTAp100']*0.44+X['Creation']+X['TOVp100']\n",
     "X['cTOV'] = X['TOVp100']/X['Load']\n",
-    "#X['DPM'] = X['Blkp100']*0.802+X['DRBp100']*0.42-4.7-0.07551*X['PFp100']+1.597019*X['STLp100']-0.26385*X['TOVp100']\n",
-    "#X['OPM'] = -8.57647+0.6111*X['PTSp100']-0.33918*(0.44*X['FTAp100']+X['FGAp100'])+0.440814*X['FTAp100']+0.379745*X['3PAp100']+0.634044*X['ASTp100']+0.77827*X['ORBp100']-1.08855*X['TOVp100']+0.26262*X['STLp100']\n",
-    "#X['BPM'] = X['OPM'] + X['DPM']\n",
+    "X['DPM'] = X['Blkp100']*0.802+X['DRBp100']*0.42-4.7-0.07551*X['PFp100']+1.597019*X['STLp100']-0.26385*X['TOVp100']\n",
+    "X['OPM'] = -8.57647+0.6111*X['PTSp100']-0.33918*(0.44*X['FTAp100']+X['FGAp100'])+0.440814*X['FTAp100']+0.379745*X['3PAp100']+0.634044*X['ASTp100']+0.77827*X['ORBp100']-1.08855*X['TOVp100']+0.26262*X['STLp100']\n",
+    "X['BPM'] = X['OPM'] + X['DPM']\n",
+    "X['Age'] = df['Age']\n",
     "\n",
     "#X['PassP'] = ((X['ASTp100']-(0.38*X['Creation']))*0.752+ X['Creation'] + X['TOVp100']) ** 0.67\n",
     "#'OPM','DPM','cTOV','Load'#stat_list[:-2]+\n",
-    "X = X[[_ for _ in X.columns if '%' in _ or _[-1]=='r' or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in ['Creation','PER','MP','Hgt']]]\n",
+    "X = X[[_ for _ in X.columns if '%' in _ or _[-1]=='r' or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in ['BPM','Creation','cTOV','Load','Age','MP','Hgt']]]\n",
     "X.columns"
    ]
   },
@@ -74,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#_ =  plt.hist(X['BPM'],150)"
+    "_ =  plt.hist(X['OWSp36'],150)"
    ]
   },
   {
@@ -86,7 +90,10 @@
     "from sklearn import neural_network\n",
     "from sklearn import linear_model\n",
     "from sklearn import preprocessing\n",
-    "from sklearn import feature_selection\n"
+    "from sklearn import feature_selection\n",
+    "from sklearn import  multioutput\n",
+    "from sklearn import ensemble\n",
+    "from sklearn import svm"
    ]
   },
   {
@@ -113,7 +120,10 @@
     "ts = []\n",
     "for i in range(trials):\n",
     "    #clf = neural_network.MLPRegressor((36,5,24,36),'tanh',solver='adam',max_iter=1000)\n",
-    "    clf = neural_network.MLPRegressor((),'identity',solver='lbfgs')\n",
+    "    clf = neural_network.MLPRegressor((),'identity',solver='lbfgs',alpha=3e2)\n",
+    "    #clf = multioutput.MultiOutputRegressor(linear_model.SGDRegressor(penalty='l1',alpha=1e-3,tol=1e-3,max_iter=50))\n",
+    "    #clf = ensemble.ExtraTreesRegressor(8,criterion='mae',max_depth=8,verbose=1)\n",
+    "    #clf = multioutput.MultiOutputRegressor(svm.SVR())\n",
     "    clf.fit(prescale_X,prescale_y)\n",
     "    yt = scalery.inverse_transform(clf.predict(prescale_X))\n",
     "    err = np.linalg.norm(yt-y)\n",
@@ -142,11 +152,9 @@
     "\n",
     "for i,c in enumerate(y.columns):\n",
     "    coeffs = clf.coefs_[-1][:,i]\n",
-    "    v = np.argsort(coeffs)[::-1]\n",
+    "    v = np.argsort(abs(coeffs))[::-1]\n",
     "    print(c)\n",
-    "    for i2 in v:\n",
-    "        if abs(coeffs[i2]) < 0.1:\n",
-    "            continue\n",
+    "    for i2 in v[:10]:\n",
     "        print('\\t{:25s}\\t{:.2f}'.format(col_names[i2],coeffs[i2]))\n"
    ]
   },
@@ -156,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 2010\n",
+    "GEN_YEAR = 2019\n",
     "tyear = [GEN_YEAR]\n",
     "if tyear[0] < 1980:\n",
     "    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
@@ -236,7 +244,7 @@
    "outputs": [],
    "source": [
     "# add playoff data to normal data\n",
-    "if False:\n",
+    "if True:\n",
     "    for ty in tyear:\n",
     "        for player in player_stats[ty]:\n",
     "            for table_in in player_stats[ty][player]:\n",
@@ -330,6 +338,12 @@
     "            'AtRimFGP':player_stats[ty][name]['totals'][0][12]*100,\n",
     "            'LowPostFGP':player_stats[ty][name]['totals'][0][12]*100, #12\n",
     "            'MidRangeFGP':player_stats[ty][name]['totals'][0][13]*100}\n",
+    "        if 'roster' in player_stats[ty][name]:\n",
+    "            d['Age']= GEN_YEAR-int(player_stats[ty][name]['roster'][0][3].split(',')[-1])\n",
+    "        else:\n",
+    "            d['Age']=np.random.randint(25,35)\n",
+    "            #print(name)\n",
+    "\n",
     "        #for stat in X.columns:\n",
     "        d.update({'FG%':player_stats[ty][name]['totals'][0][6]*100,\n",
     "            'Hgt':3.7*(hgt-66),\n",
@@ -400,15 +414,15 @@
     "            'OPM':player_stats[ty][name]['advanced'][0][16],\n",
     "            'BPM':player_stats[ty][name]['advanced'][0][18],\n",
     "\n",
-    "            'OWSp36':36*player_stats[ty][name]['advanced'][0][16]/player_stats[ty][name]['advanced'][0][2],\n",
-    "            'DWSp36':36*player_stats[ty][name]['advanced'][0][17]/player_stats[ty][name]['advanced'][0][2]})\n",
+    "            'OWSp36':36*player_stats[ty][name]['advanced'][0][16]/player_stats[ty][name]['per_game'][0][3],\n",
+    "            'DWSp36':36*player_stats[ty][name]['advanced'][0][17]/player_stats[ty][name]['per_game'][0][3]})\n",
     "        d['3PtP'] = (2/(1+np.exp(-d['3PAp100']))-1)*d['3P%']/100\n",
     "        d['Creation'] = d['ASTp100']*0.1843+(d['PTSp100']+d['TOVp100'])*0.0969-2.3021*d['3PtP']+0.0582*(d['ASTp100']*(d['PTSp100']+d['TOVp100'])*d['3PtP'] )-1.1942\n",
     "        d['Load'] = (d['ASTp100']-(0.38*d['Creation'])*0.75)+d['FGAp100']+d['FTAp100']*0.44+d['Creation']+d['TOVp100']\n",
     "        d['cTOV'] = d['TOVp100']/d['Load']\n",
-    "        #d['DPM'] = d['Blkp100']*0.802+d['DRBp100']*0.42-4.7-0.07551*d['PFp100']+1.597019*d['STLp100']-0.26385*d['TOVp100']\n",
-    "        #d['OPM'] = -8.57647+0.6111*d['PTSp100']-0.33918*(0.44*d['FTAp100']+d['FGAp100'])+0.440814*d['FTAp100']+0.379745*d['3PAp100']+0.634044*d['ASTp100']+0.77827*d['ORBp100']-1.08855*d['TOVp100']+0.26262*d['STLp100']\n",
-    "        #d['BPM'] = d['OPM']+d['DPM']\n",
+    "        d['DPM'] = d['Blkp100']*0.802+d['DRBp100']*0.42-4.7-0.07551*d['PFp100']+1.597019*d['STLp100']-0.26385*d['TOVp100']\n",
+    "        d['OPM'] = -8.57647+0.6111*d['PTSp100']-0.33918*(0.44*d['FTAp100']+d['FGAp100'])+0.440814*d['FTAp100']+0.379745*d['3PAp100']+0.634044*d['ASTp100']+0.77827*d['ORBp100']-1.08855*d['TOVp100']+0.26262*d['STLp100']\n",
+    "        d['BPM'] = d['OPM']+d['DPM']\n",
     "\n",
     "        MP = np.nan_to_num(player_stats[ty][name]['totals'][0][3])\n",
     "        mp_scale = np.tanh(MP/600) # basically 1 by 1200 MP\n",
@@ -482,7 +496,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#player_vectors[player_names.index('Joel Embiid')][13],X.columns[13]"
+    "#player_vectors[player_names.index('Joel Embiid')][list(X.columns).index('OWSp36')],X.columns[list(X.columns).index('OWSp36')]\n",
+    "#player_stats[2019]['Joel Embiid']['advanced'][0][12],player_stats[2019]['Joel Embiid']['per_game'][0][3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = plt.hist(Xn[:,list(X.columns).index('Age')],150,density=True)\n",
+    "_ = plt.hist(X['Age'],150,alpha=0.5,density=True)"
    ]
   },
   {
@@ -500,7 +525,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for n,v in zip(X.columns,Xn.min(0)):\n",
+    "for n,v in zip(X.columns,Xn.max(0)):\n",
     "    print(n,v)"
    ]
   },
@@ -639,7 +664,7 @@
     "        plt.legend()\n",
     "        plt.title(X.columns[ri] + ' ' + str(ri))\n",
     "        plt.tight_layout()\n",
-    "        plt.xlim(-100,100)\n",
+    "        #plt.xlim(-100,100)\n",
     "from collections import OrderedDict\n",
     "\n",
     "def write_roman(num):\n",
@@ -715,7 +740,9 @@
     "        new_player['pos'] = player_stats[py][name]['roster'][0][0]\n",
     "        new_player['weight'] = int(player_stats[py][name]['roster'][0][2])\n",
     "        ht = [int(_) for _ in player_stats[py][name]['roster'][0][1].split('-')]\n",
-    "        new_player['height'] = ht[0]*12 + ht[1]\n",
+    "        new_player['hgt'] = ht[0]*12 + ht[1]\n",
+    "        #if name == 'Sleepy Floyd':\n",
+    "        #    print(ht,new_player)\n",
     "        #new_player['draft'] = {'year':py-exp_years}\n",
     "\n",
     "        new_player['born'] = {'year':int(player_stats[py][name]['roster'][0][3].split(',')[-1]),'loc':''}\n",
@@ -727,7 +754,7 @@
     "        print(name)\n",
     "        new_player['tid'] = int(-1)\n",
     "        new_player['weight'] = int(np.random.normal(220,20))\n",
-    "        new_player['height'] = int(np.random.normal(6*12+6,3))\n",
+    "        new_player['hgt'] = int(np.random.normal(6*12+6,3))\n",
     "        new_player['born'] = {'year':int(GEN_YEAR-np.random.normal(32,2)),'loc':''}\n",
     "        new_player['pos'] = \"GF\"\n",
     "        #print(new_player)\n",
