--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "#X['PassP'] = ((X['ASTp100']-(0.38*X['Creation']))*0.752+ X['Creation'] + X['TOVp100']) ** 0.67\n",
     "#'OPM','DPM','cTOV','Load'#stat_list[:-2]+\n",
-    "X = X[[_ for _ in X.columns if '%' in _ or _[-1]=='r' or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in ['BPM','Creation','cTOV','Load','Age','MP','Hgt']]]\n",
+    "X = X[[_ for _ in X.columns if '%' in _ or _[-1]=='r' or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in ['Creation','cTOV','Load','Age','MP','Hgt']]]\n",
     "X.columns"
    ]
   },
@@ -169,6 +169,7 @@
     "if tyear[0] < 1980:\n",
     "    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
     "    raise\n",
+    "\n",
     "CURRENT_YEAR = 2019\n",
     "if tyear[0] <= CURRENT_YEAR-1:\n",
     "    # fill out the next 3 drafts\n",
@@ -179,7 +180,8 @@
     "if tyear[0] <= CURRENT_YEAR-3:\n",
     "    # fill out the next 3 drafts\n",
     "    tyear.append(tyear[0]+3)\n",
-    "    \n",
+    "if GEN_YEAR >= 1981:\n",
+    "    tyear.append(GEN_YEAR-1)\n",
     "all_tables = {}\n",
     "for ty in tyear: \n",
     "    all_tables[ty] = np.load('tables_{}.pkl'.format(ty))\n",
@@ -206,14 +208,21 @@
     "            #print(table.index)\n",
     "            for row in table.itertuples():\n",
     "                name = row[0]\n",
+    "                name = name.replace('\\xa0\\xa0',' ')\n",
     "                if name == 'Team Totals':\n",
     "                    continue\n",
+    "                nsplit = name.split(' ')\n",
+    "                if nsplit[-1] in ['Jr.','Sr.','I','II','III',\"IV\",'(TW)']:\n",
+    "                    name = ' '.join(nsplit[:-1])\n",
+    "\n",
     "                player_table = player_stats[ty].get(name,{})\n",
     "                player_row = player_table.get(table_name,[])\n",
     "                player_row = player_row + [row]\n",
     "\n",
     "                player_table[table_name] = player_row\n",
     "                player_stats[ty][name] = player_table\n",
+    "                #if name == 'Dennis Smith Jr.' or name == 'Luka Doncic':\n",
+    "                #    print(player_stats[ty][name],team)\n",
     "            table_columns[table_name] = table.columns\n"
    ]
   },
@@ -319,103 +328,110 @@
     "    for name in player_stats[ty]:\n",
     "        #name = 'Jimmy Butler'\n",
     "        #name = 'Ben Simmons'\n",
-    "        if not 'totals' in player_stats[ty][name]:\n",
-    "            continue\n",
+    "        stats = player_stats[ty][name]\n",
+    "        if not 'totals' in stats:\n",
+    "            if tyear[-1] < ty and name in player_stats[tyear[-1]] and 'totals' in player_stats[tyear[-1]][name]:\n",
+    "                stats = player_stats[tyear[-1]][name]\n",
+    "                print(name)\n",
+    "            else:\n",
+    "            #print(name)\n",
+    "            #print(stats)\n",
+    "                continue\n",
     "        player_names.append(name)\n",
     "        player_years.append(ty)\n",
     "        try:\n",
-    "            ht = [int(_) for _ in player_stats[ty][name]['roster'][0][1].split('-')]\n",
+    "            ht = [int(_) for _ in stats['roster'][0][1].split('-')]\n",
     "            hgt = ht[0]*12 + ht[1]\n",
     "        except:\n",
     "            hgt=70\n",
-    "        if 'shooting' in player_stats[ty][name]:\n",
+    "        if 'shooting' in stats:\n",
     "            d = {\n",
-    "            'AtRimFGP':player_stats[ty][name]['shooting'][0][11]*100,\n",
-    "            'LowPostFGP':player_stats[ty][name]['shooting'][0][11]*100, #12\n",
-    "            'MidRangeFGP':player_stats[ty][name]['shooting'][0][13]*100}\n",
+    "            'AtRimFGP':stats['shooting'][0][11]*100,\n",
+    "            'LowPostFGP':stats['shooting'][0][11]*100, #12\n",
+    "            'MidRangeFGP':stats['shooting'][0][13]*100}\n",
     "        else:\n",
     "            d = {\n",
-    "            'AtRimFGP':player_stats[ty][name]['totals'][0][12]*100,\n",
-    "            'LowPostFGP':player_stats[ty][name]['totals'][0][12]*100, #12\n",
-    "            'MidRangeFGP':player_stats[ty][name]['totals'][0][13]*100}\n",
-    "        if 'roster' in player_stats[ty][name]:\n",
-    "            d['Age']= GEN_YEAR-int(player_stats[ty][name]['roster'][0][3].split(',')[-1])\n",
+    "            'AtRimFGP':stats['totals'][0][12]*100,\n",
+    "            'LowPostFGP':stats['totals'][0][12]*100, #12\n",
+    "            'MidRangeFGP':stats['totals'][0][13]*100}\n",
+    "        if 'roster' in stats:\n",
+    "            d['Age']= GEN_YEAR-int(stats['roster'][0][3].split(',')[-1])\n",
     "        else:\n",
     "            d['Age']=np.random.randint(25,35)\n",
     "            #print(name)\n",
     "\n",
     "        #for stat in X.columns:\n",
-    "        d.update({'FG%':player_stats[ty][name]['totals'][0][6]*100,\n",
+    "        d.update({'FG%':stats['totals'][0][6]*100,\n",
     "            'Hgt':3.7*(hgt-66),\n",
-    "            'FG': player_stats[ty][name]['per_game'][0][4],\n",
-    "            'FGA': player_stats[ty][name]['per_game'][0][5],\n",
-    "            '3P': player_stats[ty][name]['per_game'][0][7],\n",
-    "            '3PA': player_stats[ty][name]['per_game'][0][8],\n",
-    "            'FT': player_stats[ty][name]['per_game'][0][14],\n",
-    "            'FTA': player_stats[ty][name]['per_game'][0][15],\n",
-    "            'ORB': player_stats[ty][name]['per_game'][0][17],\n",
-    "            'DRB': player_stats[ty][name]['per_game'][0][18],\n",
-    "            'TRB': player_stats[ty][name]['per_game'][0][19],\n",
-    "            'AST': player_stats[ty][name]['per_game'][0][20],\n",
-    "            'STL': player_stats[ty][name]['per_game'][0][21],\n",
-    "            'Blk': player_stats[ty][name]['per_game'][0][22],\n",
-    "            'TOV': player_stats[ty][name]['per_game'][0][23],\n",
-    "            'PF': player_stats[ty][name]['per_game'][0][24],\n",
-    "            'PTS': player_stats[ty][name]['per_game'][0][25],\n",
-    "            'OWS':player_stats[ty][name]['advanced'][0][16],\n",
-    "            'DWS':player_stats[ty][name]['advanced'][0][17],\n",
-    "            '3P%':player_stats[ty][name]['totals'][0][9]*100,\n",
-    "            'MP':player_stats[ty][name]['per_game'][0][3],\n",
-    "            'FT%':player_stats[ty][name]['totals'][0][16]*100,\n",
-    "            'TS%':player_stats[ty][name]['advanced'][0][4]*100,\n",
-    "            '3PAr':player_stats[ty][name]['advanced'][0][5]*100,\n",
-    "            'FTr':player_stats[ty][name]['advanced'][0][6]*100,\n",
-    "            'ORB%':player_stats[ty][name]['advanced'][0][7],\n",
-    "            'DRB%':player_stats[ty][name]['advanced'][0][8],\n",
-    "            'TRB%':player_stats[ty][name]['advanced'][0][9],\n",
-    "            'AST%':player_stats[ty][name]['advanced'][0][10],\n",
-    "            'STL%':player_stats[ty][name]['advanced'][0][11],\n",
-    "            'BLK%':player_stats[ty][name]['advanced'][0][12],\n",
-    "            'TOV%':player_stats[ty][name]['advanced'][0][13],\n",
-    "            'USG%':player_stats[ty][name]['advanced'][0][14],\n",
-    "            '+/-':player_stats[ty][name]['advanced'][0][22],\n",
-    "            'FGp36':player_stats[ty][name]['per_minute'][0][4],\n",
-    "            'FGAp36':player_stats[ty][name]['per_minute'][0][5],\n",
-    "            '3Pp36':player_stats[ty][name]['per_minute'][0][6],\n",
-    "            '3PAp36':player_stats[ty][name]['per_minute'][0][7],\n",
-    "            'FTp36':player_stats[ty][name]['per_minute'][0][12],\n",
-    "            'FTAp36':player_stats[ty][name]['per_minute'][0][13],\n",
-    "            'ORBp36':player_stats[ty][name]['per_minute'][0][16],\n",
-    "            'DRBp36':player_stats[ty][name]['per_minute'][0][17],\n",
-    "            'TRBp36':player_stats[ty][name]['per_minute'][0][18],\n",
-    "            'ASTp36':player_stats[ty][name]['per_minute'][0][19],\n",
-    "            'TOVp36':player_stats[ty][name]['per_minute'][0][22],\n",
-    "            'STLp36':player_stats[ty][name]['per_minute'][0][20],\n",
-    "            'Blkp36':player_stats[ty][name]['per_minute'][0][21],\n",
-    "            'PFp36':player_stats[ty][name]['per_minute'][0][23],\n",
-    "            'PTSp36':player_stats[ty][name]['per_minute'][0][24],\n",
-    "            'FGp100':player_stats[ty][name]['per_poss'][0][4],\n",
-    "            'FGAp100':player_stats[ty][name]['per_poss'][0][5],\n",
-    "            '3Pp100':player_stats[ty][name]['per_poss'][0][6],\n",
-    "            '3PAp100':player_stats[ty][name]['per_poss'][0][7],\n",
-    "            'FTp100':player_stats[ty][name]['per_poss'][0][12],\n",
-    "            'FTAp100':player_stats[ty][name]['per_poss'][0][13],\n",
-    "            'ORBp100':player_stats[ty][name]['per_poss'][0][16],\n",
-    "            'DRBp100':player_stats[ty][name]['per_poss'][0][17],\n",
-    "            'TRBp100':player_stats[ty][name]['per_poss'][0][18],\n",
-    "            'ASTp100':player_stats[ty][name]['per_poss'][0][19],\n",
-    "            'TOVp100':player_stats[ty][name]['per_poss'][0][22],\n",
-    "            'STLp100':player_stats[ty][name]['per_poss'][0][20],\n",
-    "            'Blkp100':player_stats[ty][name]['per_poss'][0][21],\n",
-    "            'PFp100':player_stats[ty][name]['per_poss'][0][23],\n",
-    "            'PTSp100':player_stats[ty][name]['per_poss'][0][24],\n",
-    "            'PER':player_stats[ty][name]['advanced'][0][3],\n",
-    "            'DPM':player_stats[ty][name]['advanced'][0][17],\n",
-    "            'OPM':player_stats[ty][name]['advanced'][0][16],\n",
-    "            'BPM':player_stats[ty][name]['advanced'][0][18],\n",
+    "            'FG': stats['per_game'][0][4],\n",
+    "            'FGA': stats['per_game'][0][5],\n",
+    "            '3P': stats['per_game'][0][7],\n",
+    "            '3PA': stats['per_game'][0][8],\n",
+    "            'FT': stats['per_game'][0][14],\n",
+    "            'FTA': stats['per_game'][0][15],\n",
+    "            'ORB': stats['per_game'][0][17],\n",
+    "            'DRB': stats['per_game'][0][18],\n",
+    "            'TRB': stats['per_game'][0][19],\n",
+    "            'AST': stats['per_game'][0][20],\n",
+    "            'STL': stats['per_game'][0][21],\n",
+    "            'Blk': stats['per_game'][0][22],\n",
+    "            'TOV': stats['per_game'][0][23],\n",
+    "            'PF': stats['per_game'][0][24],\n",
+    "            'PTS': stats['per_game'][0][25],\n",
+    "            'OWS':stats['advanced'][0][16],\n",
+    "            'DWS':stats['advanced'][0][17],\n",
+    "            '3P%':stats['totals'][0][9]*100,\n",
+    "            'MP':stats['per_game'][0][3],\n",
+    "            'FT%':stats['totals'][0][16]*100,\n",
+    "            'TS%':stats['advanced'][0][4]*100,\n",
+    "            '3PAr':stats['advanced'][0][5]*100,\n",
+    "            'FTr':stats['advanced'][0][6]*100,\n",
+    "            'ORB%':stats['advanced'][0][7],\n",
+    "            'DRB%':stats['advanced'][0][8],\n",
+    "            'TRB%':stats['advanced'][0][9],\n",
+    "            'AST%':stats['advanced'][0][10],\n",
+    "            'STL%':stats['advanced'][0][11],\n",
+    "            'BLK%':stats['advanced'][0][12],\n",
+    "            'TOV%':stats['advanced'][0][13],\n",
+    "            'USG%':stats['advanced'][0][14],\n",
+    "            '+/-':stats['advanced'][0][22],\n",
+    "            'FGp36':stats['per_minute'][0][4],\n",
+    "            'FGAp36':stats['per_minute'][0][5],\n",
+    "            '3Pp36':stats['per_minute'][0][6],\n",
+    "            '3PAp36':stats['per_minute'][0][7],\n",
+    "            'FTp36':stats['per_minute'][0][12],\n",
+    "            'FTAp36':stats['per_minute'][0][13],\n",
+    "            'ORBp36':stats['per_minute'][0][16],\n",
+    "            'DRBp36':stats['per_minute'][0][17],\n",
+    "            'TRBp36':stats['per_minute'][0][18],\n",
+    "            'ASTp36':stats['per_minute'][0][19],\n",
+    "            'TOVp36':stats['per_minute'][0][22],\n",
+    "            'STLp36':stats['per_minute'][0][20],\n",
+    "            'Blkp36':stats['per_minute'][0][21],\n",
+    "            'PFp36':stats['per_minute'][0][23],\n",
+    "            'PTSp36':stats['per_minute'][0][24],\n",
+    "            'FGp100':stats['per_poss'][0][4],\n",
+    "            'FGAp100':stats['per_poss'][0][5],\n",
+    "            '3Pp100':stats['per_poss'][0][6],\n",
+    "            '3PAp100':stats['per_poss'][0][7],\n",
+    "            'FTp100':stats['per_poss'][0][12],\n",
+    "            'FTAp100':stats['per_poss'][0][13],\n",
+    "            'ORBp100':stats['per_poss'][0][16],\n",
+    "            'DRBp100':stats['per_poss'][0][17],\n",
+    "            'TRBp100':stats['per_poss'][0][18],\n",
+    "            'ASTp100':stats['per_poss'][0][19],\n",
+    "            'TOVp100':stats['per_poss'][0][22],\n",
+    "            'STLp100':stats['per_poss'][0][20],\n",
+    "            'Blkp100':stats['per_poss'][0][21],\n",
+    "            'PFp100':stats['per_poss'][0][23],\n",
+    "            'PTSp100':stats['per_poss'][0][24],\n",
+    "            'PER':stats['advanced'][0][3],\n",
+    "            'DPM':stats['advanced'][0][17],\n",
+    "            'OPM':stats['advanced'][0][16],\n",
+    "            'BPM':stats['advanced'][0][18],\n",
     "\n",
-    "            'OWSp36':36*player_stats[ty][name]['advanced'][0][16]/player_stats[ty][name]['per_game'][0][3],\n",
-    "            'DWSp36':36*player_stats[ty][name]['advanced'][0][17]/player_stats[ty][name]['per_game'][0][3]})\n",
+    "            'OWSp36':36*stats['advanced'][0][16]/stats['per_game'][0][3],\n",
+    "            'DWSp36':36*stats['advanced'][0][17]/stats['per_game'][0][3]})\n",
     "        d['3PtP'] = (2/(1+np.exp(-d['3PAp100']))-1)*d['3P%']/100\n",
     "        d['Creation'] = d['ASTp100']*0.1843+(d['PTSp100']+d['TOVp100'])*0.0969-2.3021*d['3PtP']+0.0582*(d['ASTp100']*(d['PTSp100']+d['TOVp100'])*d['3PtP'] )-1.1942\n",
     "        d['Load'] = (d['ASTp100']-(0.38*d['Creation'])*0.75)+d['FGAp100']+d['FTAp100']*0.44+d['Creation']+d['TOVp100']\n",
@@ -424,7 +440,7 @@
     "        d['OPM'] = -8.57647+0.6111*d['PTSp100']-0.33918*(0.44*d['FTAp100']+d['FGAp100'])+0.440814*d['FTAp100']+0.379745*d['3PAp100']+0.634044*d['ASTp100']+0.77827*d['ORBp100']-1.08855*d['TOVp100']+0.26262*d['STLp100']\n",
     "        d['BPM'] = d['OPM']+d['DPM']\n",
     "\n",
-    "        MP = np.nan_to_num(player_stats[ty][name]['totals'][0][3])\n",
+    "        MP = np.nan_to_num(stats['totals'][0][3])\n",
     "        mp_scale = np.tanh(MP/600) # basically 1 by 1200 MP\n",
     "        if np.isnan(mp_scale):\n",
     "            print(name,ty,MP)\n",
@@ -451,7 +467,7 @@
    "outputs": [],
    "source": [
     "first_n = len([yr for yr in player_years if yr == tyear[0]])\n",
-    "gen_FA = len(teams)*5\n",
+    "gen_FA = len(teams)*5 if CURRENT_YEAR!=GEN_YEAR else 0\n",
     "first_n,len(teams),gen_FA\n"
    ]
   },
@@ -539,6 +555,9 @@
     "\n",
     "for team in all_tables[tyear[0]]:\n",
     "    for name in all_tables[tyear[0]][team]['roster'].index:\n",
+    "        nsplit = name.split(' ')\n",
+    "        if nsplit[-1] in ['Jr.','Sr.','I','II','III',\"IV\",'(TW)']:\n",
+    "            name = ' '.join(nsplit[:-1])\n",
     "        rosters[name] = team\n",
     "    #print(team,)\n"
    ]
@@ -729,13 +748,16 @@
     "\n",
     "        \n",
     "        year_gap = (py-tyear[0]) #0,1,2\n",
-    "        \n",
-    "        if py == tyear[0] and name in rosters:\n",
-    "             tid = abbrev_to_tid[rosters[name]]\n",
+    "\n",
+    "\n",
+    "        if py == GEN_YEAR and name in rosters:\n",
+    "            tid = abbrev_to_tid[rosters[name]]\n",
+    "\n",
     "        elif exp_years != 0:\n",
     "            continue\n",
     "        else:\n",
     "            tid = [-2,-4,-5][year_gap-1]\n",
+    "\n",
     "        new_player['tid'] = tid\n",
     "        new_player['pos'] = player_stats[py][name]['roster'][0][0]\n",
     "        new_player['weight'] = int(player_stats[py][name]['roster'][0][2])\n",
@@ -747,7 +769,8 @@
     "\n",
     "        new_player['born'] = {'year':int(player_stats[py][name]['roster'][0][3].split(',')[-1]),'loc':''}\n",
     "        if tyear[0]>=CURRENT_YEAR and 'contracts' in player_stats[py][name]:\n",
-    "            ctrct = [float(_) for _ in player_stats[py][name]['contracts'][0] if _ != '0.5']\n",
+    "            #print(name,player_stats[py][name]['contracts'])\n",
+    "            ctrct = [float(_) for _ in player_stats[py][name]['contracts'][0] if _.replace('\\xa0','0.5') != '0.5']\n",
     "            if len(ctrct) > 0:\n",
     "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':CURRENT_YEAR-1+len(ctrct)}\n",
     "    elif i > Xn.shape[0]:\n",
