dont use height

--- a/compare_roster.ipynb
+++ b/compare_roster.ipynb
@@ -12,6 +12,14 @@
     "R2 = 'BBGM_League_2_1985_preseason.json'\n",
     "R1 = 'BBGM_League_3_2019_preseason.json'\n",
     "R2 = 'BBGM_League_4_2019_preseason.json'\n",
+    "\n",
+    "\n",
+    "R1 = 'BBGM_League_3_2019_preseason.json'\n",
+    "R2 = 'BBGM_League_8_2019_preseason.json'\n",
+    "#R1 = 'BBGM_League_5_1985_preseason.json'\n",
+    "#R2 = 'BBGM_League_24_1985_preseason.json'\n",
+    "#R1 = 'BBGM_League_21_2019_regular_season_0-1.json'\n",
+    "#R2 = 'BBGM_League_22_2019_regular_season_1-0.json'\n",
     "import json\n",
     "import os\n",
     "import sys\n",
@@ -69,7 +77,8 @@
    "source": [
     "df1 = pd.DataFrame(p1d).T.drop(['fuzz','skills','season','pos'],1).apply(pd.to_numeric)\n",
     "df2 = pd.DataFrame(p2d).T.drop(['fuzz','skills','season','pos'],1).apply(pd.to_numeric)\n",
-    "merged = pd.merge(df1,df2,left_index=True,right_index=True)"
+    "merged = pd.merge(df1,df2,left_index=True,right_index=True)\n",
+    "#df1.loc['LeBron James'],df2.loc['LeBron James']"
    ]
   },
   {
@@ -107,13 +116,13 @@
     "\n",
     "    plt.xlabel('Alexnoob')\n",
     "    plt.ylabel('Automatic')\n",
-    "    plt.title('{} ({:.2f})'.format(k,c1[0],c2[0]))\n",
+    "    plt.title('{} ({:.2f})'.format(k,c1[0]))\n",
     "    plt.xlim(0,100)\n",
     "    plt.ylim(0,100)\n",
     "    plt.plot(np.arange(0,100),np.arange(0,100),c='k')\n",
     "    plt.grid(True)\n",
     "    plt.tight_layout()\n",
-    "plt.suptitle('Alexnoob vs. Automatic Rosters (2018-2019)',size=20)\n",
+    "plt.suptitle('Alexnoob vs. Automatic Rosters (1985-1986)',size=20)\n",
     "plt.subplots_adjust(top=0.9)"
    ]
   },
@@ -123,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diffs.sort_values('pot',0,False)"
+    "diffs.sort_values('ovr',0,True)"
    ]
   },
   {
