--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -49,11 +49,12 @@
    "source": [
     "stat_list = ['FG','FGA','3P',\"3PA\",'FT','FTA',\\\n",
     "             'ORB','DRB','TRB','AST','TOV','STL',\"Blk\",\\\n",
-    "             'PF',\"PTS\",'OWS','DWS']\n",
+    "             'PF','PTS']\n",
     "for name in stat_list:\n",
     "    den = np.maximum(1,df.MP)\n",
     "    #if name in ['OWS','DWS']:\n",
     "    #    den = den*df['G']\n",
+    "    #X[name] = df[name]\n",
     "    X[name + 'p36'] = 36* df[name]/den\n",
     "    X[name + 'p100'] = X[name + 'p36']*4/3\n",
     "\n",
@@ -68,7 +69,7 @@
     "\n",
     "#X['PassP'] = ((X['ASTp100']-(0.38*X['Creation']))*0.752+ X['Creation'] + X['TOVp100']) ** 0.67\n",
     "#'OPM','DPM','cTOV','Load'#stat_list[:-2]+\n",
-    "X = X[[_ for _ in X.columns if '%' in _ or _[-1]=='r' or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in ['Creation','cTOV','Load','Age','MP','Hgt']]]\n",
+    "X = X[[_ for _ in X.columns if '%' in _ or _[-1]=='r' or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in (['Creation','cTOV','Load','Age','MP'])]]\n",
     "X.columns"
    ]
   },
@@ -154,8 +155,15 @@
     "    coeffs = clf.coefs_[-1][:,i]\n",
     "    v = np.argsort(abs(coeffs))[::-1]\n",
     "    print(c)\n",
-    "    for i2 in v[:10]:\n",
-    "        print('\\t{:25s}\\t{:.2f}'.format(col_names[i2],coeffs[i2]))\n"
+    "    coeffs2 = [(coeffs[i2],col_names[i2]) for i2 in v[:5]]\n",
+    "    #for v,n in sorted(coeffs2,reverse=True):\n",
+    "    #    print('{:.2f} * {} + '.format(v,n),end='')\n",
+    "    print('| Variable | Coeff |')\n",
+    "    print('|----------|-------|')\n",
+    "    for v,n in sorted(coeffs2,reverse=True):\n",
+    "        print('|{:25s}|{:.2f}|'.format(n,v))\n",
+    "    #for v,n in sorted(coeffs2,reverse=True):\n",
+    "    #    print('\\t{:25s}\\t{:.2f}'.format(n,v))\n"
    ]
   },
   {
@@ -330,12 +338,10 @@
     "        #name = 'Ben Simmons'\n",
     "        stats = player_stats[ty][name]\n",
     "        if not 'totals' in stats:\n",
-    "            if tyear[-1] < ty and name in player_stats[tyear[-1]] and 'totals' in player_stats[tyear[-1]][name]:\n",
+    "            if ty == GEN_YEAR and name in player_stats[tyear[-1]] and 'totals' in player_stats[tyear[-1]][name]:\n",
     "                stats = player_stats[tyear[-1]][name]\n",
-    "                print(name)\n",
+    "                print(name,ty,tyear)\n",
     "            else:\n",
-    "            #print(name)\n",
-    "            #print(stats)\n",
     "                continue\n",
     "        player_names.append(name)\n",
     "        player_years.append(ty)\n",
@@ -397,10 +403,10 @@
     "            '+/-':stats['advanced'][0][22],\n",
     "            'FGp36':stats['per_minute'][0][4],\n",
     "            'FGAp36':stats['per_minute'][0][5],\n",
-    "            '3Pp36':stats['per_minute'][0][6],\n",
-    "            '3PAp36':stats['per_minute'][0][7],\n",
-    "            'FTp36':stats['per_minute'][0][12],\n",
-    "            'FTAp36':stats['per_minute'][0][13],\n",
+    "            '3Pp36':stats['per_minute'][0][7],\n",
+    "            '3PAp36':stats['per_minute'][0][8],\n",
+    "            'FTp36':stats['per_minute'][0][13],\n",
+    "            'FTAp36':stats['per_minute'][0][14],\n",
     "            'ORBp36':stats['per_minute'][0][16],\n",
     "            'DRBp36':stats['per_minute'][0][17],\n",
     "            'TRBp36':stats['per_minute'][0][18],\n",
@@ -457,7 +463,7 @@
    "outputs": [],
    "source": [
     "#stat_list\n",
-    "#player_stats[2010]['Stephen Curry']['per_game'][0][17]"
+    "#player_stats[2019]['Stephen Curry']['per_minute'][0][14]"
    ]
   },
   {
@@ -480,13 +486,15 @@
     "Xn = np.nan_to_num(np.array(player_vectors))\n",
     "scalerX2 = preprocessing.StandardScaler()\n",
     "scalerX2.fit(Xn[:first_n])\n",
+    "#scalerX2 = scalerX\n",
     "Xn_s =scalerX2.transform(np.nan_to_num(Xn))\n",
     "Xn_fs = fexp.transform(np.nan_to_num(Xn_s))\n",
     "predict = clf.predict(Xn_fs)\n",
     "ratings = np.nan_to_num(scalery.inverse_transform(predict))\n",
     "#ratings[:,0] = Xn[:,list(X.columns).index('Hgt')]\n",
     "HGT_PRED = 0.75\n",
-    "ratings[:,0] = HGT_PRED*ratings[:,0] + (1-HGT_PRED)* Xn[:,list(X.columns).index('Hgt')]\n",
+    "if 'Hgt' in list(X.columns):\n",
+    "    ratings[:,0] = HGT_PRED*ratings[:,0] + (1-HGT_PRED)* Xn[:,list(X.columns).index('Hgt')]\n",
     "if gen_FA > 0:\n",
     "    FA_ratings = scalery.inverse_transform(clf.predict(fexp.transform(0.1*np.random.randn(gen_FA,Xn.shape[1]))))\n",
     "    ratings = np.vstack([ratings,FA_ratings] )\n",
@@ -522,8 +530,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = plt.hist(Xn[:,list(X.columns).index('Age')],150,density=True)\n",
-    "_ = plt.hist(X['Age'],150,alpha=0.5,density=True)"
+    "_ = plt.hist(Xn[:,list(X.columns).index('FTp36')],150,density=True,alpha=0.5,label='NBA')\n",
+    "_ = plt.hist(X['FTp36'],150,alpha=0.5,density=True,label='BBGM')\n",
+    "plt.legend()"
    ]
   },
   {
@@ -671,17 +680,17 @@
     "    plt.xlim(-100,100)\n",
     "    plt.legend()\n",
     "elif False:\n",
-    "    plt.figure(figsize=(20,20))\n",
+    "    plt.figure(figsize=(7*3,6*3))\n",
     "\n",
     "    for ri in range(len(X.columns)):\n",
     "        #ri = 13\n",
-    "        plt.figure()\n",
-    "        #plt.subplot(6,6,ri+1)\n",
+    "        #plt.figure()\n",
+    "        plt.subplot(6,7,ri+1)\n",
     "\n",
-    "        _ = plt.hist(Xn[:,ri],100,density=True,alpha=0.5,label='mine')\n",
-    "        _ = plt.hist(X.iloc[:,ri],100,density=True,alpha=0.5,label='expected')\n",
+    "        _ = plt.hist(Xn[:,ri],100,density=True,alpha=0.5,label='NBA')\n",
+    "        _ = plt.hist(X.iloc[:,ri],100,density=True,alpha=0.5,label='BBGM')\n",
     "        plt.legend()\n",
-    "        plt.title(X.columns[ri] + ' ' + str(ri))\n",
+    "        plt.title(X.columns[ri])# + ' ' + str(ri))\n",
     "        plt.tight_layout()\n",
     "        #plt.xlim(-100,100)\n",
     "from collections import OrderedDict\n",
@@ -805,6 +814,34 @@
     "with open('auto_roster_{}.json'.format(tyear[0]),'wt') as fp:\n",
     "    json.dump(base,fp, indent=4, sort_keys=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
