generate replacement level players

--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -38,7 +38,7 @@
     "X = X[(X['AST%'] >0) & (X['AST%'] < 100)]\n",
     "X['MP'] = df.MP\n",
     "X['Hgt'] = df['Hgt']\n",
-    "df.columns"
+    "df.columns\n"
    ]
   },
   {
@@ -70,7 +70,20 @@
     "#X['PassP'] = ((X['ASTp100']-(0.38*X['Creation']))*0.752+ X['Creation'] + X['TOVp100']) ** 0.67\n",
     "#'OPM','DPM','cTOV','Load'#stat_list[:-2]+\n",
     "X = X[[_ for _ in X.columns if '%' in _ or _[-1]=='r' or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in (['Creation','cTOV','Load','Age','MP'])]]\n",
-    "X.columns"
+    "\n",
+    "replacement_filter = (df.Salary > 0.5) & (df.Salary < 1.0)\n",
+    "replacement_player_mean_bs = X[replacement_filter].mean()\n",
+    "replacement_player_std_bs = X[replacement_filter].std()\n",
+    "replacement_player_cov_bs = X[replacement_filter].cov()\n",
+    "\n",
+    "replacement_player_mean_r = y[replacement_filter].mean()\n",
+    "replacement_player_std_r = y[replacement_filter].std()\n",
+    "replacement_player_cov_r = y[replacement_filter].cov()\n",
+    "\n",
+    "\n",
+    "replacement_player_mean_r\n",
+    "\n",
+    "X.columns\n"
    ]
   },
   {
@@ -79,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ =  plt.hist(X['OWSp36'],150)"
+    "#_ =  plt.hist(X['OWSp36'],150)"
    ]
   },
   {
@@ -495,7 +508,8 @@
     "HGT_PRED = 0.75\n",
     "if 'Hgt' in list(X.columns):\n",
     "    ratings[:,0] = HGT_PRED*ratings[:,0] + (1-HGT_PRED)* Xn[:,list(X.columns).index('Hgt')]\n",
-    "if gen_FA > 0:\n",
+    "# now we can sample directly from ratings\n",
+    "if False and gen_FA > 0:\n",
     "    FA_ratings = scalery.inverse_transform(clf.predict(fexp.transform(0.1*np.random.randn(gen_FA,Xn.shape[1]))))\n",
     "    ratings = np.vstack([ratings,FA_ratings] )\n",
     "    # use the first FA as a mean to bring down the low minutes people\n",
@@ -729,8 +743,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_names = player_names + [\"Free Agent{}\".format(write_roman(i)) for i in range(gen_FA)]\n",
-    "player_years = player_years + [GEN_YEAR for i in range(gen_FA)]"
+    "if gen_FA > 0:\n",
+    "    player_names_f = player_names + [\"Free Agent{}\".format(write_roman(i)) for i in range(gen_FA)]\n",
+    "    player_years_f = player_years + [GEN_YEAR for i in range(gen_FA)]\n",
+    "    # scale them down, we don't want a bunch of amazing replacements\n",
+    "    MEAN_S = 0.95\n",
+    "    STD_S = 0.25\n",
+    "    rp_ratings = np.random.multivariate_normal(MEAN_S*replacement_player_mean_r,STD_S*replacement_player_cov_r,size=(gen_FA))\n",
+    "    ratings_f = np.vstack([ratings,rp_ratings])\n",
+    "else:\n",
+    "    player_names_f = player_names\n",
+    "    player_years_f = player_years\n",
+    "    ratings_f = ratings"
    ]
   },
   {
@@ -743,9 +767,9 @@
     "import copy\n",
     "\n",
     "pp = pprint.PrettyPrinter()\n",
-    "for i,name in enumerate(player_names):\n",
-    "    py = player_years[i]\n",
-    "    name = player_names[i]\n",
+    "for i,name in enumerate(player_names_f):\n",
+    "    py = player_years_f[i]\n",
+    "    name = player_names_f[i]\n",
     "    sname = name.split(' ')\n",
     "    new_player = {}\n",
     "    new_player['firstName'] = sname[0]\n",
@@ -795,7 +819,7 @@
     "        continue\n",
     "    #print(year_gap)\n",
     "    scale_rookie = [1.0,1.0,1.0,1.0][year_gap]\n",
-    "    new_player['ratings'] = [{k: int(scale_rookie*np.clip(ratings[i,y_keys.index(km)],0,100)) for k,km in y_map.items()}]\n",
+    "    new_player['ratings'] = [{k: int(scale_rookie*np.clip(ratings_f[i,y_keys.index(km)],0,100)) for k,km in y_map.items()}]\n",
     "    \n",
     "    players.append(new_player)\n",
     "    #if name in ['Luka Doncic']: #\"Trevon Duval\",'LeBron James'\n",
@@ -820,7 +844,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(ratings),len(ratings_f),len(ratings)+gen_FA"
+   ]
   },
   {
    "cell_type": "code",
