code to generate replacement blending

--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -460,10 +460,9 @@
     "        d['BPM'] = d['OPM']+d['DPM']\n",
     "\n",
     "        MP = np.nan_to_num(stats['totals'][0][3])\n",
-    "        mp_scale = np.tanh(MP/600) # basically 1 by 1200 MP\n",
-    "        if np.isnan(mp_scale):\n",
-    "            print(name,ty,MP)\n",
-    "        player_scales.append(mp_scale)\n",
+    "        #if np.isnan(mp_scale):\n",
+    "        #    print(name,ty,MP)\n",
+    "        player_scales.append(MP)\n",
     "        #d['PassP'] = ((d['ASTp100']-(0.38*d['Creation']))*0.752+ d['Creation'] + d['TOVp100']) ** 0.67\n",
     "        player_vectors.append([d[stat] for stat in X.columns])\n",
     "X.columns"
@@ -509,12 +508,16 @@
     "if 'Hgt' in list(X.columns):\n",
     "    ratings[:,0] = HGT_PRED*ratings[:,0] + (1-HGT_PRED)* Xn[:,list(X.columns).index('Hgt')]\n",
     "# now we can sample directly from ratings\n",
-    "if False and gen_FA > 0:\n",
-    "    FA_ratings = scalery.inverse_transform(clf.predict(fexp.transform(0.1*np.random.randn(gen_FA,Xn.shape[1]))))\n",
-    "    ratings = np.vstack([ratings,FA_ratings] )\n",
-    "    # use the first FA as a mean to bring down the low minutes people\n",
+    "\n",
+    "# if we want to scale players down based on minutes played to replacement level\n",
+    "if False:\n",
+    "    MEAN_S = 0.95\n",
+    "    STD_S = 0.25\n",
+    "\n",
     "    c = np.array(player_scales).reshape((-1,1))\n",
-    "    #ratings[:Xn.shape[0]] = ratings[:Xn.shape[0]]*c + (1-c)*np.repeat(ratings[Xn.shape[0]].reshape((-1,1)),Xn.shape[0],1).T\n"
+    "    c = np.tanh(c/600) # basically 1 by 1200 MP\n",
+    "\n",
+    "    ratings[:Xn.shape[0]] = ratings[:Xn.shape[0]]*c + (1-c)*np.repeat(np.array(replacement_player_mean_r).reshape((-1,1)),Xn.shape[0],1).T\n"
    ]
   },
   {
