fixed a bug where rookies reappeared as draft picks

--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -648,9 +648,9 @@
     "#-4 is for prospects in next year's draft\n",
     "#-5 is for prospects in the draft after that.\n",
     "players = []\n",
-    "if tyear[0] == CURRENT_YEAR:\n",
+    "if GEN_YEAR == CURRENT_YEAR:\n",
     "    players += [_ for _ in playersOG if _['tid'] in [-1,-2,-4,-5]]\n",
-    "elif tyear[0] == CURRENT_YEAR-1:\n",
+    "elif GEN_YEAR == CURRENT_YEAR-1:\n",
     "    for player in playersOG:\n",
     "        if player['tid'] == -2:\n",
     "            player['tid'] = -4\n",
@@ -779,17 +779,19 @@
     "    new_player['lastName'] = ' '.join(sname[1:])\n",
     "    year_gap = 0\n",
     "    if name in player_stats[py] and 'roster' in player_stats[py][name]:\n",
+    "        #if name == 'Ben Simmons':\n",
+    "        #    print(name,py)\n",
     "        exp_years =  player_stats[py][name]['roster'][0][5]\n",
     "        exp_years = int(0 if exp_years == 'R' else exp_years)\n",
     "\n",
-    "        \n",
-    "        year_gap = (py-tyear[0]) #0,1,2\n",
+    "        year_gap = (py-GEN_YEAR) #0,1,2\n",
     "\n",
     "\n",
     "        if py == GEN_YEAR and name in rosters:\n",
     "            tid = abbrev_to_tid[rosters[name]]\n",
-    "\n",
     "        elif exp_years != 0:\n",
+    "            continue\n",
+    "        elif py < GEN_YEAR:\n",
     "            continue\n",
     "        else:\n",
     "            tid = [-2,-4,-5][year_gap-1]\n",
@@ -820,6 +822,8 @@
     "    else:\n",
     "        #print(name)\n",
     "        continue\n",
+    "    #if name == 'Ben Simmons':\n",
+    "    #    print(new_player)\n",
     "    #print(year_gap)\n",
     "    scale_rookie = [1.0,1.0,1.0,1.0][year_gap]\n",
     "    new_player['ratings'] = [{k: int(scale_rookie*np.clip(ratings_f[i,y_keys.index(km)],0,100)) for k,km in y_map.items()}]\n",
