--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -23,7 +23,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('BBGM_League_2_all_seasons_Average_Stats.csv')"
+    "df = pd.read_csv('avg_stats.csv')\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df = pd.read_csv('BBGM_League_2_all_seasons_Average_Stats.csv')\n",
+    "#df.shape"
    ]
   },
   {
@@ -134,9 +145,9 @@
     "ts = []\n",
     "for i in range(trials):\n",
     "    #clf = neural_network.MLPRegressor((36,5,24,36),'tanh',solver='adam',max_iter=1000)\n",
-    "    clf = neural_network.MLPRegressor((),'identity',solver='lbfgs',alpha=3e2)\n",
-    "    #clf = multioutput.MultiOutputRegressor(linear_model.SGDRegressor(penalty='l1',alpha=1e-3,tol=1e-3,max_iter=50))\n",
-    "    #clf = ensemble.ExtraTreesRegressor(8,criterion='mae',max_depth=8,verbose=1)\n",
+    "    clf = neural_network.MLPRegressor((),'identity',solver='lbfgs',alpha=1e3)\n",
+    "    #clf = multioutput.MultiOutputRegressor(linear_model.SGDRegressor(penalty='l2',alpha=1e3,eta0=1e-6,tol=1e-12,max_iter=50,verbose=True))\n",
+    "    #clf = ensemble.ExtraTreesRegressor(8,criterion='mae',max_depth=3,verbose=1)\n",
     "    #clf = multioutput.MultiOutputRegressor(svm.SVR())\n",
     "    clf.fit(prescale_X,prescale_y)\n",
     "    yt = scalery.inverse_transform(clf.predict(prescale_X))\n",
@@ -274,7 +285,7 @@
    "outputs": [],
    "source": [
     "# add playoff data to normal data\n",
-    "if True:\n",
+    "if False:\n",
     "    for ty in tyear:\n",
     "        for player in player_stats[ty]:\n",
     "            for table_in in player_stats[ty][player]:\n",
@@ -496,7 +507,8 @@
    "outputs": [],
    "source": [
     "Xn = np.nan_to_num(np.array(player_vectors))\n",
-    "scalerX2 = preprocessing.StandardScaler()\n",
+    "# tuned this to get roughly 8-12 players at 70 or above. Which seemed like normal for a league\n",
+    "scalerX2 = preprocessing.RobustScaler(quantile_range=(32.0, 68.0))\n",
     "scalerX2.fit(Xn[:first_n])\n",
     "#scalerX2 = scalerX\n",
     "Xn_s =scalerX2.transform(np.nan_to_num(Xn))\n",
@@ -797,7 +809,7 @@
     "            tid = [-2,-4,-5][year_gap-1]\n",
     "\n",
     "        new_player['tid'] = tid\n",
-    "        new_player['pos'] = player_stats[py][name]['roster'][0][0]\n",
+    "        new_player['pos'] = player_stats[py][name]['roster'][0][0].replace('-','')\n",
     "        new_player['weight'] = int(player_stats[py][name]['roster'][0][2])\n",
     "        ht = [int(_) for _ in player_stats[py][name]['roster'][0][1].split('-')]\n",
     "        new_player['hgt'] = ht[0]*12 + ht[1]\n",
